# xplus-xsd2cpp

./: COPYING  MIT.txt  Makefile  Makefile.am  Makefile.am~  Makefile.in  Motivation.md  ProjectHome.md  README.txt  config.h  config.h.in~  config.status  configure  configure.ac  depcomp  genExTestsHtml.sh  genExamplesAll.sh  libtool  runTests.sh
Tests/w3c_tests/digtest/: dig.xsd  main.cpp  valid.xml
Tests/w3c_tests/nist5/: main.cpp
Tests/w3c_tests/reDH7a/: main.cpp  reDH7a.xsd  valid.xml
Tests/w3c_tests/stG003/: main.cpp
Tests/w3c_tests/stH005/: main.cpp  valid.xml
Tests/w3c_tests/stZ015/: main.cpp  stZ015.xsd  valid.xml
Tests/w3c_tests/ste099/: main.cpp
Tests/w3c_tests/w3c_examples_test/: README.txt  examples-soap11.xml  examples-soap12.xml  examples.wsdl  examples.xsd  examples2wsdl.xsl
Tests/xplus_neg_tests/ccExt2/: ccExt2.xsd
Tests/xplus_neg_tests/ccExtAny/: ccExtAny.xsd  main.cpp
Tests/xplus_neg_tests/scRest/: main.cpp  scRest.xsd
autom4te.cache/: output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
db_detector/: README.txt  annotate-xml.xsl  annotated_results.xsl  detect.bat  detect.sh  detector.xsl  jquery.js
docs/: xsd.xls
docs/html_docs/: about_gen_source.html  browse_examples.html  browse_tests.html  compliance.html  download.html  examples.html  examples_complete.html  index.html  install.html  license.html  ltframe.html  motivation.html  release_history.html  sourcerepos.html  support.html  unsupported.html  usage.html
examples/anyUriQNameNotnSamples/: anyUriQNameNotnSamples.xsd
examples/chineseDoc_utf8/: chineseDoc_utf8.xsd  main.cpp  testme  valid.xml
examples/cppReservedKeywords/: README  cppReservedKeywords.xsd  main.cpp  myTypes.xsd  valid.xml
examples/decAndDerSamples/: decAndDerSamples.xsd
examples/floatDoubleSamples/: floatDoubleSamples.xsd
examples/helloWorld/: helloWorld.xsd  main.cpp  valid.xml
examples/helloWorldWide/: helloWorldWide.xsd  main.cpp  valid.xml
examples/hexBase64Samples/: hexBase64Samples.xsd
examples/includeDemo/: README  files.xsd  includeDemo.xsd  main.cpp  simplest.xml  valid.xml
examples/ipo/: README  address.xsd  main.cpp  nsaliases.xml
examples/japaneseDoc_utf8/: japaneseDoc_utf8.xsd  valid.xml
examples/mails/: mails.xsd  main.cpp  valid.xml
examples/netEnabled/: README.txt  echoHexBinaryElement-HexBinaryElement01.xml  echoHexBinaryElement-HexBinaryElement02.xml  main.cpp  netEnabled.xsd  nsaliases.xml  valid.xml
examples/org/: README  engg.xsd  hr.xsd  legal.xsd  main.cpp  org.xsd  valid.xml
examples/person/: main.cpp  person.xsd
examples/po/: main.cpp  po.xsd  valid.xml
examples/simpleTypesDemo/: main.cpp  nsaliases.xml  simpleTypesDemo.xsd  valid.xml
examples/simplest/: main.cpp  nsaliases.xml  simplest.xsd  valid.xml
examples/strAndDerSamples/: strAndDerSamples.xsd
examples/unionListSamples/: invalid1.xml  invalid2.xml  invalid3.xml  invalid4.xml  invalid5.xml  invalid6.xml  invalid7.xml  invalid8.xml  invalid9.xml  unionListSamples.xsd  valid.xml
examples/xmldsig/: README.txt  main.cpp  nsaliases.xml  signature-example-dsa.xml  signature-example-rsa.xml  valid.xml
examples/xsds/: 2.xsd  5.xsd  6.xsd  ct1_nons.xsd
include/: Makefile.am  Makefile.in
include/DOM/: Attribute.h  CDATASection.h  CharacterData.h  Comment.h  DOMAllInc.h  DOMCommonInc.h  DOMException.h  DOMImplementation.h  DOMParser.h  Document.h  DocumentFragment.h  DocumentType.h  Element.h  Entity.h  EntityRef.h  ExpatParser.h  Makefile  Makefile.in  NamedNodeMap.h  Node.h  NodePredicates.h  Notation.h  PI.h  SchematicParser.h  Stack.h  Stream.h  TextNode.h  XMLParser.h  XmlDecl.h
include/Poco/: Exception.h  Timespan.h
include/XPlus/: AutoPtr.h  Base64Codec.h  BinaryTree.h  ConvertUTF.h  Date.h  DateAlgo.h  DateTime.h  DateTimeUtils.h  Day.h  Duration.h  Exception.h  FPA.h  Functor.h  LList.h  List.h  Month.h  MonthDay.h  Namespaces.h  StringUtils.h  TextEncoding.h  Time.h  TimeZone.h  Txn.h  Types.h  UString.h  XPlusObject.h  Year.h  YearMonth.h  bounds.cpp
include/XSD/: Enums.h  FSM.h  Facets.h  Sampler.h  SimpleTypeListTmpl.h  SimpleTypeUnionTmpl.h  TypeDefinitionFactory.h  UrTypes.h  UserOps.h  XSDException.h  XSDFSM.h  xsdUtils.h
include/expat/: expat.h  expat_external.h
resources/xsd/: XMLSchema.xsd
src/: Makefile  Makefile.am  Makefile.in
src/DOM/: Attribute.cpp  CDATASection.cpp  CharacterData.cpp  Comment.cpp  DOMParser.cpp  Document.cpp  DocumentType.cpp  Element.cpp  ExpatParser.cpp  Makefile.am  Makefile.in  NamedNodeMap.cpp  Node.cpp  SchematicTest.cpp  Stream.cpp  TextNode.cpp  XmlDecl.cpp
src/DOM/expat/: xmlparse.c  xmlrole.c  xmltok.c
src/Poco/: DateTimeFormat.cpp  DateTimeFormatter.cpp  Exception.cpp  Makefile.am  Makefile.in
src/XPlus/: Base64Codec.cpp  ConvertUTF.c  DateAlgo.cpp  DateTime.cpp  DateTimeUtils.cpp  Duration.cpp  Exception.cpp  FPA.cpp  Makefile.am  Makefile.in  Namespaces.cpp  StringUtils.cpp  TextEncoding.cpp  UString.cpp  main.cpp
src/XSD/: Enums.cpp  FSM.cpp  FsmTest.cpp  Makefile.am  Makefile.in  Samplers.cpp  UrTypes.cpp  UserOps.cpp  XSDFSM.cpp  main.cpp  xsdUtils.cpp
src/tools/: Base64Test.cpp  DOMParse.cpp  Makefile.am  Makefile.in  RegTest.cpp  beautify  checkForUpgrades-xmlplus  genHtmlExComplete.sh  genHtmlExTests.sh  xsd2cpp  xsd2cpp.in
src/tools/makeTmpl/: Makefile.am.src  Makefile.am.top_srcdir  Makefile.am.top_srcdir.in  autogen.sh  doxygen.cfg
src/tools/resources/: Makefile.am.include  Makefile.am.src.in  Makefile.am.top_srcdir.in  README.build.txt  configure.ac  version
src/tools/xsl/: complexContent.gram  complexTypeC.xsl  complexTypeH.xsl  constraints.xsl  resolution.xsl  rules.xml  simpleContent-grammar.xml  test.xsl  xmlplusDict.xml  xsd2cpp.xsl  xsd2cppBuiltinSimple.xsl  xsd2cppST.xsl  xsdIncludes.xsl  xsdUtils.xsl
w3c_tests/: README.txt
w3c_tests/digtest/: nsaliases.xml
w3c_tests/nist5/: main.cpp  valid.xml
w3c_tests/reDH7a/: reDH7a.xml
w3c_tests/stE080/: valid.xml
w3c_tests/stG003/: valid.xml
w3c_tests/stZ015/: stZ015.xsd
w3c_tests/ste099/: valid.xml
(+95 files in other folders)
