nobase_include_HEADERS = \
  Poco/AutoPtr.h \
  Poco/Bugcheck.h \
  Poco/Config.h \
  Poco/Exception.h \
  Poco/Foundation.h \
  Poco/NumberFormatter.h \
  Poco/Platform.h \
  Poco/Platform_POSIX.h \
  Poco/Platform_VMS.h \
  Poco/Platform_WIN32.h \
  Poco/RegularExpression.h \
  Poco/Timespan.h \
  Poco/Timestamp.h \
  Poco/Timezone.h \
  Poco/Types.h \
  \
  XPlus/AutoPtr.h \
  XPlus/Base64Codec.h \
  XPlus/BinaryTree.h \
  XPlus/ConvertUTF.h \
  XPlus/DateAlgo.h \
  XPlus/Date.h \
  XPlus/DateTime.h \
  XPlus/DateTimeUtils.h \
  XPlus/Day.h \
  XPlus/Duration.h \
  XPlus/Exception.h \
  XPlus/FPA.h \
  XPlus/Functor.h \
  XPlus/List.h \
  XPlus/LList.h \
  XPlus/MonthDay.h \
  XPlus/Month.h \
  XPlus/Namespaces.h \
  XPlus/StringUtils.h \
  XPlus/Time.h \
  XPlus/TimeZone.h \
  XPlus/Types.h \
  XPlus/TextEncoding.h \
  XPlus/UString.h \
  XPlus/XPlusObject.h \
  XPlus/Year.h \
  XPlus/YearMonth.h \
  \
  DOM/Attribute.h \
  DOM/CDATASection.h \
  DOM/CharacterData.h \
  DOM/Comment.h \
  DOM/DocumentFragment.h \
  DOM/Document.h \
  DOM/DocumentType.h \
  DOM/DOMAllInc.h \
  DOM/DOMCommonInc.h \
  DOM/DOMException.h \
  DOM/DOMImplementation.h \
  DOM/DOMParser.h \
  DOM/Element.h \
  DOM/Entity.h \
  DOM/EntityRef.h \
  DOM/ExpatParser.h \
  DOM/NamedNodeMap.h \
  DOM/Node.h \
  DOM/Notation.h \
  DOM/PI.h \
  DOM/Stack.h \
  DOM/Stream.h \
  DOM/TextNode.h \
  DOM/XMLParser.h \
  DOM/XmlDecl.h \
  \
  XSD/Enums.h \
  XSD/Facets.h \
  XSD/FSM.h \
  XSD/PrimitiveTypes.h \
  XSD/SimpleTypeListTmpl.h \
  XSD/SimpleTypeUnionTmpl.h \
  XSD/UrTypes.h \
  XSD/XSDException.h \
  XSD/XSDFSM.h \
  XSD/xsdUtils.h \
  XSD/TypeDefinitionFactory.h \
  XSD/UserOps.h \
  XSD/Sampler.h

